--- a/app/views/layouts/_feat_info.html.erb
+++ b/app/views/layouts/_feat_info.html.erb
@@ -1,27 +1,32 @@
 <div class="row">
-	<div class="span2" align="right"><strong>Feat name:</strong></div>
-	<div class="span2"><%= link_to "#{@feat.name}", feat_path(@feat.id) %></div>
+	<h1><div class="span12" align="left">The Feat</div><h1>
+	<h2><div class="span2"><%= link_to "#{@feat.name}", feat_path(@feat.id) %></div></h2>
 </div>
+<br>
+
 <div class="row">
-	<div class="span2"  align="right"><strong>Created by:</strong></div>
-	<div class="span2">
+	<h1><div class="span12"  align="left">Created By</div></h1>
+	<h2><div class="span12">
 		<%= link_to "#{@feat.user.username}", user_path(@feat.user.id) %>
-	</div>
+	</div></h2>
 </div>
+<br>
 <div class="row">
-	<div class="span2" align="right"><strong>Location:</strong></div>
-	<div class="span2">
+	<h1><div class="span12" align="left">Feat Location</div></h1>
+	<h2><div class="span2">
 		<%= @location.name %><br>
 		<%= @location.address %>
-	</div>
+	</div></h2>
 </div>
+<br>
 <div class="row">
-	<div class="span2" align="right"><strong>Description:</strong></div>
-	<div class="span2"><%= @feat.description %></div>
+	<h1><div class="span12" align="left">Feat Description</div></h1>
+	<h2><div class="span2"><%= @feat.description %></div></h2>
 </div>
+<br>
 <div class="row">
-	<div class="span2" align="right"><strong>Scoring:</strong></div>
-	<div class="span2">
+	<h1><div class="span12" align="left">Scoring</div></h1>
+	<div class="span12">
 		<% if @feat.low_score_wins %>	
 			<% if @feat.timed %>
 				Shortest time wins.
