--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -121,6 +121,8 @@
   min-height: 700px;
   padding: 40px;
   margin-bottom: 0px;
+  margin-left: -20px;
+  margin-right: -20px;
   background-image: url(background.jpg);
   background-repeat: repeat;
       -moz-box-shadow: inset 0 10px 10px -10px #999;
@@ -264,55 +266,7 @@
 }
 
 
-.craig-unit {
-  min-height: 20px;
-  padding: 5px 20px 0px 20px;
-  margin-bottom: 20px;
-  background: #FFF;
-  border: 1px solid #CCC;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
 
-}
-
-.craig-unit h1 {
-  margin-bottom: 0;
-  font-size: 16px;
-  line-height: 1.3;
-  letter-spacing: 0px;
-  font-weight: 400;
-  color: #000;
-}
-
-.craig-unit h2 {
-  font-size: 16px;
-  line-height: 1;
-  color: #000;
-}
-
-.pull-right {
-  float: right;
-}
-
-.pull-left {
-  float: left;
-}
-
-.hide {
-  display: none;
-}
-
-.show {
-  display: block;
-}
-
-.invisible {
-  visibility: hidden;
-}
 .scott-unit {
   min-height: 10px;
   padding: 13px;
@@ -371,11 +325,73 @@
   visibility: hidden;
 }
 
+.craig-unit {
+  min-height: 20px;
+  padding: 15px 15px 15px 15px;
+  margin-bottom: 20px;
+  background: #FFF;
+  border: 1px solid #CCC;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+
+}
+
+
+.craig-unit h1 {
+  margin-bottom: 0;
+  font-size: 16px;
+  line-height: 1.3;
+  letter-spacing: 0px;
+  font-weight: 400;
+  color: #000;
+}
+
+.craig-unit h2 {
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0px;
+  font-weight: 300;
+  color: #000;
+}
+
+.craig-unit h3 {
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0px;
+  font-weight: 300;
+  color: #000;
+}
+
+.pull-right {
+  float: right;
+}
+
+.pull-left {
+  float: left;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+
 .home-well {
   min-height: 20px;
   min-width: 20px;
   padding: 10px 22px 20px 22px;
-  background-color: #000;
+  background-color: #333;
   margin-bottom: 0px;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
@@ -402,6 +418,7 @@
   letter-spacing: 1px;
 }
 
+
 .map-well {
   min-height: 20px;
   min-width: 20px;
@@ -417,15 +434,18 @@
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.navbar-inner {
-  min-height: 50px;
-  padding: 10px, 20px, 1px, 20px;
-  background-color: rgba(51,51,51,1);
-  background-image: none;
+
+.hr1 {
+  margin: 15px 0px 15px 0px;
+  border: 0;
+  border-bottom: 1px dashed #999;
+  width: 100%;
 }
+
 
 .btn-small {
   margin-top: 3px;
+  margin-bottom: -20px;
   padding: 7px 12px 9px 12px;
   font-size: 15px;
   line-height: 1;
@@ -442,6 +462,25 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+}
+
+
+.navbar-inner {
+  min-height: 60px;
+  padding: 7px, 20px, 6px, 20px;
+  background-color: rgba(51,51,51,1);
+  background-image: none;
+}
+
+.navbar .brand {
+  display: block;
+  float: left;
+  padding: 7px 5px 5px 12px;
+  margin-left: -20px;
+  font-size: 0px;
+  font-weight: 200;
+  line-height: 1;
+  color: #999999;
 }
 
 .navbar .nav > li > a {
