--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -1,25 +1,23 @@
 <%= render 'shared/single_loc_map_script' %>
-<div class="container">
-  <div class="row">
-    <div class="span5">
-      <div class="scott-unit">
-				<div class="row">
-					<%= render 'layouts/feat_info' %>
-					<br>
-	      	<br>
-				</div>
-				<div class="row">
-					<div class="span1">
-						<br>
-					</div>
-					<div class="span3">
-						<%= render 'attempt_form' %>
-					</div>
-				</div>				
-			</div>
+
+  <div class="background-unit">
+    <div class="container">
+	  <div class="row">
+        <div class="span3">
+		  <div class="craig-unit">
+	
+		    <%= render 'layouts/feat_info' %>
+			<div class="hr1"></div>
+
+		    <%= render 'attempt_form' %>
+		  </div>
+		</div>				
+			
+	    <div class="span9">
+	      <div class="map-well"> 
+	        <div id="map_canvas"></div>
+          </div>
+	    </div>
+	  </div>
     </div>
-		<div id="map_canvas" class="span7"></div>
   </div>
-</div>
-<br>
-<br>
