--- a/app/views/feats/new.html.erb
+++ b/app/views/feats/new.html.erb
@@ -1,46 +1,53 @@
 <%= render 'shared/single_loc_map_script' %>
-<div class="container">
-  <div class="row">
-    <div class="span5">
-      <div class="craig-unit">
-        <div class="scott-unit">
-          <h1>Create a new feat</h1>
-					<br>
-		      <h2>
-						<%= @location.name %><br>
-		        <%= @location.address %><br>
-		      </h2>
-					<h4><%= link_to "Change Location", locate_locations_path %></h4>
-          <br>
-          <%= form_for @feat do |f| %>
-            <%= render 'shared/error_messages', target: @feat %>
-						<fieldset>
-              <%= f.label :name %>
-              <%= f.text_field :name, class: "field span4" %>
-              <%= f.label :description %>
-              <%= f.text_area :description, rows: 4, class: "field span4" %>
-							<%= f.label "Scored or timed"%>
-							<%= f.radio_button :timed, 1 %>
-							<%= f.label :timed, style: "display:inline;" %>
-							<br>
-							<%= f.radio_button :timed, 0, checked: true %>
-							<%= f.label :timed, "Scored", style: "display:inline;" %>
-							<br>
-							<br>
-							<%= f.check_box :low_score_wins %>
-	            <%= f.label "Low score/time wins", style: "display:inline;" %>
-              <br>
-              <br>
-	            <%= f.submit "Create Feat", 
-	              class: "btn btn-large btn-primary" %>
-						</fieldset>
-          <% end %>
-        </div>
-      </div>
-    </div>
-		<div id="map_canvas" class="span7"></div>
-  </div>
-</div>
-<br>
-<br>
-
+  <div class="background-unit">
+    <div class="container">
+	  <div class="row-fluid">
+        <div class="span3">
+		  <div class="craig-unit">
+            <h1>Alright, so we have the Feat's location as:</h1>
+		       <h2>
+			   <%= @location.name %><br>
+		       <%= @location.address %><br>
+		       </h2>
+			   <h2><%= link_to "Change the Feat Location", locate_locations_path %></h2>
+               <div class="hr1"></div>
+			   <h1>Now it's time to name the Feat</h1>
+			   <h2>Here's an example:</h2>
+			   <center><h3>"The fastest to run accross the Key Bridge"</h3></center>
+               <%= form_for @feat do |f| %>
+               <%= render 'shared/error_messages', target: @feat %>
+			   <fieldset>
+               <%= f.label :name %>
+               <%= f.text_field :name, class: "field span12" %>
+			   <div class="hr1"></div>
+			   <h1>Finally, describe the Feat</h1>
+			   <h2>Using the Key Bridge example, you would need to clearly explain where the start and finish lines are located.</h2>
+               <%= f.label :description %>
+               <%= f.text_area :description, rows: 4, class: "field span12" %>
+			   <%= f.label "Scored or timed"%>
+			   <%= f.radio_button :timed, 1 %>
+			   <%= f.label :timed, style: "display:inline;" %>
+			   <br>
+			   <%= f.radio_button :timed, 0, checked: true %>
+			   <%= f.label :timed, "Scored", style: "display:inline;" %>
+			   <br>
+			   <br>
+			   <%= f.check_box :low_score_wins %>
+	           <%= f.label "Low score/time wins", style: "display:inline;" %>
+               <br>
+               <br>
+	           <%= f.submit "Create Feat", 
+	           class: "btn btn-small btn-primary" %>
+			   </fieldset>
+               <% end %>
+           </div>
+         </div>
+		 
+         <div class="span9">
+	       <div class="map-well"> 
+	         <div id="map_canvas"></div>
+           </div>
+	     </div>
+	   </div>
+     </div>
+   </div>
