--- a/app/views/feats/show.html.erb
+++ b/app/views/feats/show.html.erb
@@ -21,55 +21,64 @@
 		marker.setMap(gMap);
 	});
 </script>
-<div class="container">
-  <div class="row">
-    <div class="span5">
-      <div class="scott-unit">
-				<%= render 'layouts/feat_info' %>
-				<br>
-	      <br>
-				<div class="row">
-					<div class="span4" align="center">
-						<% if @attempts.empty? %>
-							<h2>This feat has no recorded attempts</h2>
-							<br>
-						<% else %>
-							<h2>Attempts:</h2>
-							<ol>
-								<% @attempts.each do |a| %>
-									<% if @feat.timed %>
-										<li><%= link_to "#{a.user.username}", 
-													user_path( a.user.id)%>: <%= a.score.to_hhmmss %>
-									<% else %>
-										<li><%= link_to "#{a.user.username}", 
-													user_path( a.user.id)%>: <%= a.score.to_s %>
-									<% end %>
-									<%= link_to "View", attempt_path(a.id) %>
-									<% if a.user.id == session[:user_id] %>
-									  <% @attempt_exists = true %>
-										<%= link_to "Update", edit_attempt_path(a.id) %>
-										<%= link_to "Delete", attempt_path(a.id),
-										 	confirm: 'Are you sure you want to delete this record?',
-											method: 'delete' %>
-									<% end %>
-									</li>
-								<% end %>
-							</ol>
-						<% end %>
-					</div>
-				</div>
-				<% unless @attempt_exists %>
-					<div class="row">
-						<div class="span4" align="center">
-							<%= link_to "Record an attempt on this feat", 
-									new_attempt_path %>
-						</div>
-					</div>
-				<% end %>
-			</div>
+
+
+ <div class="background-unit">
+    <div class="container">
+	  <div class="row">
+        <div class="span3">
+		  <div class="craig-unit">
+		  <%= render 'layouts/feat_info' %>
+		  <br>
+	      
+		  
+		 
+		      <% if @attempts.empty? %>
+		      <h2>This Feat doesn't have an attempt yet.<br> Do you want to record one?</h2>
+		      <% else %>
+		      <h1>Feat Attempts</h1>
+		      <ol>
+		      <% @attempts.each do |a| %>
+		      <% if @feat.timed %>
+		      <li><%= link_to "#{a.user.username}", 
+		      user_path( a.user.id)%>: <%= a.score.to_hhmmss %>
+		      <% else %>
+		      <li><%= link_to "#{a.user.username}", 
+		      user_path( a.user.id)%>: <%= a.score.to_s %>
+		      <% end %>
+		      <%= link_to "View", attempt_path(a.id) %>
+		      <% if a.user.id == session[:user_id] %>
+		      <% @attempt_exists = true %>
+		      <%= link_to "Update", edit_attempt_path(a.id) %>
+		      <%= link_to "Delete", attempt_path(a.id),
+		      confirm: 'Are you sure you want to delete this record?',
+		      method: 'delete' %>
+		      <% end %>
+		      </li>
+		      <% end %>
+		      </ol>
+		      <% end %>
+		
+		  
+		  <% unless @attempt_exists %>
+		  
+		 
+			  <h2><%= link_to "Record An Attempt", 
+			  new_attempt_path %></h2>
+		
+		  
+		  <% end %>
+		
+		</div>
+      </div>
+	  
+	    <div class="span9">
+	      <div class="map-well"> 
+	        <div id="map_canvas"></div>
+          </div>
+	    </div>
+	  </div>
     </div>
-		<div id="map_canvas" class="span7"></div>
   </div>
-</div>
-<br>
-<br>
+
+	
