--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </div>
+	  <div class="brand"</div>
       <%= link_to(( image_tag "feats_logo_small.png" ), root_path ) %>
+	  </div>
       <div class="nav-collapse pull-right">
         <ul class="nav">
 		      <% if current_user %>
