--- a/app/views/locations/choose_from_existing.html.erb
+++ b/app/views/locations/choose_from_existing.html.erb
@@ -21,37 +21,42 @@
 		marker.setMap(gMap);
 	});
 </script>
-<div class="row">
-  <div class="span4">
-		<div class="craig-unit">
-			<div class="scott-unit">
-        <h3>
-					The following locations exist at
-				</h3>
-				<br>
-				<%= "#{session[:address]}" %>:
-				<br>
-        <br>
-        <%= form_tag new_feat_path, method: 'get' do %>
-          <fieldset>
-						<%= select_tag(:location_id,
-						 	options_from_collection_for_select(@locations, :id, :name),
-							multiple: 'true')%>
-						<br>
-           	<%= submit_tag 'Use this location', name: nil,
-							class: "btn btn-small btn-primary" %>
+
+  <div class="background-unit">
+    <div class="container">
+	  <div class="row-fluid">
+        <div class="span3">
+		  <div class="craig-unit">
+	        <h1>The following places exist at:</h1>
+			<br>
+			<%= "#{session[:address]}" %>:
+			<br>
+            <br>
+            <%= form_tag new_feat_path, method: 'get' do %>
+            <fieldset>
+			<%= select_tag(:location_id,
+			options_from_collection_for_select(@locations, :id, :name),
+   			multiple: 'true')%>
+			<br>
+			<h1>Would you like to:</h2>
+			<br>
+           	<center><%= submit_tag 'Use one of the above places', name: nil,
+			class: "btn btn-small btn-primary" %></center>
          	</fieldset>
-        <% end %>
-				<br>
-				<h3>OR</h3>
-				<br>
-				<br>
-				<%= button_to 'Create new location', { action: 'new' }, 
-					{ method: 'get', class: 'btn btn-small btn-primary' }%>
+            <% end %>
+			<br>
+			<center><h1>or</h1></center>
+			<br>
+			<center><%= button_to 'Create a new place', { action: 'new' }, 
+			{ method: 'get', class: 'btn btn-small btn-primary' }%></center>
 		  </div>
+	    </div>
+		
+        <div class="span9">
+	      <div class="map-well"> 
+	        <div id="map_canvas"></div>
+          </div>
+	    </div>
 	  </div>
+    </div>
   </div>
-	<div id="map_canvas" class="span8"></div>
-</div>
-<br>
-<br>
