--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -205,6 +205,7 @@
   visibility: hidden;
 }
 
+
 .footer-unit {
   min-height: 25px;
   padding: 10px 15px 30px 15px;
@@ -258,76 +259,10 @@
   visibility: hidden;
 }
 
-.hr1 {
-  margin: 30px 0px 25px 0px;
-  border: 0;
-  border-top: 1px solid #eeeeee;
-  border-bottom: 1px solid #ffffff;
-}
-
-
-
-.scott-unit {
-  min-height: 10px;
-  padding: 13px;
-  margin-bottom: 0px;
-  background-color: #FFF;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-}
-.scott-unit h1 {
-  margin-bottom: 0;
-  font-size: 28px;
-  line-height: 34px;
-  letter-spacing: 0px;
-  color: #000;
-}
-
-.scott-unit h2 {
-  margin-bottom: 4px;
-  font-size: 14px;
-  line-height: 18px;
-  color: #000;
-}
-
-.scott-unit h3 {
-  margin-bottom: 0;
-  font-size: 20px;
-  line-height: 28px;
-  color: #000
-}
-
-.scott-unit h4 {
-  margin-bottom: 4px;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000;
-}
-
-.pull-right {
-  float: right;
-}
-
-.pull-left {
-  float: left;
-}
-
-.hide {
-  display: none;
-}
-
-.show {
-  display: block;
-}
-
-.invisible {
-  visibility: hidden;
-}
 
 .craig-unit {
   min-height: 20px;
-  padding: 15px 15px 15px 15px;
+  padding: 3px 15px 4px 15px;
   margin-bottom: 20px;
   background: #FFF;
   border: 1px solid #CCC;
@@ -337,9 +272,7 @@
   -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-
 }
-
 
 .craig-unit h1 {
   margin-bottom: 0;
@@ -352,15 +285,15 @@
 
 .craig-unit h2 {
   font-size: 14px;
-  line-height: 1.2;
+  line-height: 1.3;
   letter-spacing: 0px;
-  font-weight: 300;
+  font-weight: 400;
   color: #000;
 }
 
 .craig-unit h3 {
   font-size: 12px;
-  line-height: 1.2;
+  line-height: 1.3;
   letter-spacing: 0px;
   font-weight: 300;
   color: #000;
@@ -445,7 +378,7 @@
 
 .btn-small {
   margin-top: 3px;
-  margin-bottom: -20px;
+  margin-bottom: -7px;
   padding: 7px 12px 9px 12px;
   font-size: 15px;
   line-height: 1;
@@ -498,8 +431,13 @@
   background-color: transparent;
 }
 
+a {
+  color: #0066ff;
+  text-decoration: none;
+}
+
 a:hover {
-  color: #FFF;
+  color: #0066ff;
   text-decoration: underline;
 }
 
