--- a/app/views/feats/show.html.erb
+++ b/app/views/feats/show.html.erb
@@ -34,6 +34,7 @@
 			  <div class="hr1"></div>
 		      <h2>This Feat doesn't have an attempt yet. Do you want to record one?</h2>
 		      <% else %>
+			  <div class="hr1"></div>
 		      <h1>Feat Attempts</h1>
 		      <ol>
 		      <% @attempts.each do |a| %>
