--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
        <div class="row-fluid">
          <div class="span3">
            <h1><em>Feats With Friends</em></h1>
-           <a href="work.html"/><h2>How It Works</h2></a>
+				  	<%= link_to "How It Works", "/how_it_works" %> has 
            <a href="terms.html"/><h2>Terms Of Service</h2></a>
            <a href="app/views/static_pages/privacy_policy.html.erb"/><h2>Privacy Policy</h2></a>
          </div>
