--- a/app/views/attempts/edit.html.erb
+++ b/app/views/attempts/edit.html.erb
@@ -1,25 +1,22 @@
 <%= render 'shared/single_loc_map_script' %>
 
-  <div class="background-unit">
-    <div class="container">
-	  <div class="row">
-        <div class="span3">
-		  <div class="craig-unit">
-		    <%= render 'layouts/feat_info' %>
-			<br>
-	        <br>
-				
-			<%= render 'attempt_form' %>
-		  </div>
-		</div>				
-			 
-		<div class="span9">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
-          </div>
-	    </div>
-	  </div>
-    </div>
+<div class="background-unit">
+  <div class="container">
+ 		<div class="row">
+      <div class="span4">
+  			<div class="craig-unit">
+    			<%= render 'layouts/feat_info' %>
+   				<div class="hr1"></div>
+						<%= render 'attempt_form' %>
+  			</div>
+			</div>				
+			<div class="span8">
+     		<div class="map-well"> 
+       		<div id="map_canvas"></div>
+        </div>
+   		</div>
+ 		</div>
   </div>
+</div>
 
 	
