--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,8 +58,14 @@
        <div class="row-fluid">
          <div class="span3">
            <h1><em>Feats With Friends</em></h1>
-				  	<%= link_to "How It Works", "/how_it_works" %> has 
-           <a href="terms.html"/><h2>Terms Of Service</h2></a>
+				  	<h2>
+							<%= link_to "How It Works", "/how_it_works", 
+								{style: 'color:#ccc'} %>
+						</h2> 
+            <h2>
+							<%= link_to "Terms Of Service", "/terms",
+								{style: 'color:#ccc'} %>
+						</h2>
            <a href="app/views/static_pages/privacy_policy.html.erb"/><h2>Privacy Policy</h2></a>
          </div>
 		 
