--- a/app/views/locations/locate.html.erb
+++ b/app/views/locations/locate.html.erb
@@ -38,37 +38,37 @@
 	});
 </script>
 
-  <div class="background-unit">
-    <div class="container">
+<div class="background-unit">
+  <div class="container">
 	  <div class="row-fluid">
-        <div class="span3">
-		  <div class="craig-unit">
-            <h1>Enter an address for the Feat's physical location.</h1>
-			<br>
-            <%= form_for @location, url: locate_locations_path, 
-							method: 'get' do |f| %>
-            <%= render 'shared/error_messages', target: @location %>
-            <fieldset>
-            <%= f.label :address %>
-            <%= f.text_field :address, maxlength: 255 %>
+    	<div class="span4">
+		  	<div class="craig-unit">
+        	<h1>Enter an address for the Feat location.</h1>
 					<br>
-            <%= f.submit 'Search', class: "btn btn-small btn-primary" %>
+          <%= form_for @location, url: locate_locations_path, 
+							method: 'get' do |f| %>
+          	<%= render 'shared/error_messages', target: @location %>
+            <fieldset>
+            	<%= f.label :address %>
+            	<%= f.text_field :address, maxlength: 255, class: "span12" %>
+							<br>
+            	<%= f.submit 'Search', class: "btn btn-small btn-primary" %>
             </fieldset>
-            <% end %>
-			<% if !session[:address].nil? %>
-		    <br>
-			<h1>Did you mean:</h1>
-			<%= link_to "#{session[:address]}", 
-			choose_from_existing_locations_path %>
-			<% end %>
-		  </div>
-		</div>
-		
-		<div class="span9">
+          <% end %>
+					<% if !session[:address].nil? %>
+						<h1>Did you mean:</h1>
+						<h2>
+							<%= link_to "#{session[:address]}", 
+								choose_from_existing_locations_path %>
+						</h2>
+					<% end %>
+		  	</div>
+			</div>		
+			<div class="span8">
 	      <div class="map-well">  
-		    <div id="map_canvas"></div>
+		    	<div id="map_canvas"></div>
 	      </div>
-        </div>
       </div>
+    </div>
 	</div>
-  </div>
+</div>
