--- a/app/views/feats/search.html.erb
+++ b/app/views/feats/search.html.erb
@@ -71,43 +71,38 @@
 
 <div class="background-unit">
   <div class="container">
-	<div class="row-fluid">
-      <div class="span3">
-		<div class="craig-unit">
-            <%= form_tag search_feats_path, method: 'get' do %>
+		<div class="row-fluid">
+    	<div class="span4">
+				<div class="craig-unit">
+          <%= form_tag search_feats_path, method: 'get' do %>
             <fieldset>
-        	<h1>Search for Feats within</h1>
-	    	<br>
-			<%= text_field_tag :distance, params[:distance] %>
-			<br>
-	    	<h1>miles of</h1>
-			<br>
-           	<%= text_field_tag :address, params[:address], maxlength: 255 %>
-			<br>
-           	<%= submit_tag 'Search', name: nil, 
-			class: "btn btn-small btn-primary" %>
-         	</fieldset>
-            <% end %>
-	    </div>
-	  
-	    <% if @feats.any? %>
-		
-		<div class="craig-unit">
-	        <% @feats.each do |f| %>
-			<%= link_to "#{f.name}", feat_path(f.id) %><br>
-		    <% end %>
-		</div>
-	
-	    <% end %>
-  
+        			<h1>Search for Feats within</h1>
+	    				<br>
+							<%= text_field_tag :distance, params[:distance] %>
+							<br>
+	    				<h1>miles of</h1>
+							<br>
+           		<%= text_field_tag :address, params[:address], maxlength: 255 %>
+							<br>
+           		<%= submit_tag 'Search', name: nil, 
+								class: "btn btn-small btn-primary" %>
+         		</fieldset>
+          <% end %>
+				</div>
+	    	<% if @feats.any? %>
+					<div class="craig-unit">
+	        	<% @feats.each do |f| %>
+							<h2><%= link_to "#{f.name}", feat_path(f.id) %></h2>
+		    		<% end %>
+					</div>
+	    	<% end %>
       </div>
-	
-	  <div class="span9">
-	    <div class="map-well">  
+	  	<div class="span8">
+	    	<div class="map-well">  
           <div id="map_canvas"></div>
         </div>
       </div> 
-	</div>
+		</div>
     <br>
     <br>
   </div>
