--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -8,7 +8,8 @@
 	
 		    <%= render 'layouts/feat_info' %>
 			<div class="hr1"></div>
-
+            <h1>Record your Feat attempt.</h1>
+			<br>
 		    <%= render 'attempt_form' %>
 		  </div>
 		</div>				
