--- a/app/views/static_pages/how_it_works.html.erb
+++ b/app/views/static_pages/how_it_works.html.erb
@@ -9,7 +9,6 @@
             </div>
             <div class="staticbottom-well">
               <h1>AN INTERACTIVE RECORD BOARD</h1>
-              <br>
 <h2>FeatsWithFriends is an interactive record board that allows you to create and compete over location based challenges in your city and around the world.<br>
 <br>At the heart of Feats With Friends are location based challenges called Feats.  Feats can be created by anybody, but must take place at a physical location and be measurable by time (shortest or longest amount of time) or score (lowest or highest score).<br>
 <br>
@@ -22,7 +21,6 @@ Once a Feat is created, others can go the location where the feat took place, an
 <div class="hr1"></div>
 
 <h1>CREATING A FEAT</h1>
-<br>
 <h2>In order to create a Feat, you must first locate where the Feat took place on our map by searching for it's name and/or address.<br>
 <br>
 For example, let's say you want to create a Feat for the fastest time to eat a burger at Big Buns located in Arlington, VA.  Search Big Buns, Arlington, VA.  If no results are found, enter Big Buns' address, 4401 Wilson Blvd. Arlington, VA.<br>
@@ -35,7 +33,6 @@ We are constantly working to create a better, more user friendly mapping experie
 <div class="hr1"></div>
 
 <h1>DESCRIBING A FEAT</h1>
-<br>
 <h2>After entering the Feat location, provide a name and description of the Feat. Please be as detailed as possible in your Feat description.<br>
 <br>
 For example, let's say I am creating a Feat for the fastest time running across the Brooklyn Bridge. You would want to clearly describe where both the starting and finish line are located. Below is an example.<br>
@@ -51,13 +48,11 @@ Lastly, indicate how the Feat is measured, by time (lowest or highest) or score 
 
 
 <h1>RECORDING A FEAT ATTEMPT</h1>
-<br>
 <h2>After attempting a Feat, simply submit the result and either upload a picture or YouTube video link of you attempting the feat.</h2>
 <div class="hr1"></div>
 
 
 <h1>VALIDATING A FEAT ATTEMPT</h1>
-<br> 
 <h2>After recording a Feat attempt, another person who witnessed the effort must validate it by simply signing in to their Feats With Friends account, locate your Feat attempt, and click "validate this Feat."<br>
 <br> 
 There are three preferred ways to validate a Feat attempt:<br>
@@ -70,8 +65,7 @@ Non-validated Feat attempts may be recorded, however your friends and other user
 <div class="hr1"></div>
 
 <h1>FRIENDLY COMPETITION IS INGRAINED IN EVERYTHING WE DO</h1>
-<br>
-<h2>Believe it or not, we built Feats With Friends to solve a real problem: having to physically be with other people in order to compete with them.  While this remains the case for several sports and activities that arent possible with just one person, it doesn't have to be the case for everything else.<br>
+<h2>We built Feats With Friends to solve a real problem: having to physically be with other people in order to compete with them.  While this remains the case for several sports and activities that arent possible with just one person, it doesn't have to be the case for everything else.<br>
 <br>
 We also believe that while competing with strangers is fun, competing with friends drives us even more. We will keep this in mind as we continue to develop Feats With Friends.</h2> 
 
