--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,101 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-	<head>
-	  <title>Feats With Friends | Create and compete over records set all over the world.</title>
-	  <%= stylesheet_link_tag    "application", :media => "all" %>
-	  <%= javascript_include_tag "application" %>
-		<%= content_for :page_specific_js %>
-	  <%= csrf_meta_tags %>
-
-	  <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <meta name="description" content="">
-	  <meta name="author" content="">
-
-	  <!-- Le styles -->
-	  <style type="text/css">
-		 html { height: 100% }
-		 body {
-				padding-top: 60px;
-		        padding-bottom: 0px;
-				height: 100%;
-				margin: 0
-		  }
-			#map_canvas { height: 500px }
-	  </style>
-
-	  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-	  <!--[if lt IE 9]>
-	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	  <![endif]-->
-
-	  <!-- Le fav and touch icons -->
-	  <link rel="shortcut icon" href="#"><!--assets/ico/favicon.ico-->
-	  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-	  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-	  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-
-	</head>
-	
+	<%= render 'layouts/head' %>
 	<body>
-
 		<div class="container">
 			<%= render 'layouts/navbar' %>
-			  <% flash.each do |key, value| %>
-			    <div class="alert alert-<%= key %>"><%= value %></div>
-			  <% end %>
-			  <%= yield %>
-	   </div>
-	   
-   </body>   
-
-			  
-   <footer>
-   
-   <div class="footer-unit">
-     <div class="container">
-       <div class="row-fluid">
-         <div class="span3">
-           <h1><em>Feats With Friends</em></h1>
-				  	<h2>
-							<%= link_to "How It Works", "/how_it_works", 
-								{style: 'color:#ccc'} %>
-						</h2> 
-            <h2>
-							<%= link_to "Terms Of Service", "/terms",
-								{style: 'color:#ccc'} %>
-						</h2>
-           <a href="app/views/static_pages/privacy_policy.html.erb"/><h2>Privacy Policy</h2></a>
-         </div>
-		 
-         <div class="span4">
-           <h1><em>Help Us Build A Better Website</em></h1>
-           <a href="report.html"/><h2>Report A Bug</h2></a>
-           <a href="mailto:feedback@featswithfriends.com"><h2>feedback@featswithfriends.com</h2></a>
-         </div>
-		 
-         <div class="span3">
-           <h1><em>Connecting With Us</em></h1>
-           <a href="http://www.twitter.com/featsof" onclick="window.open('https://twitter.com/FeatsOf','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2>@featsof</h2></a>
-           <a href="http://www.facebook.com/featswithfriends" onclick="window.open('https://facebook.com/featswithfriends','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2>facebook</h2></a>
-         </div>
-         
-		 <div class="span2"><h3><br>©2012 IgnitionPad, LLC. All Rights Reserved</h3>
-         
-	   </div>
-     </div>
-   </div>
-  
-      
-   </footer>
-     
-
-			<% if Rails.env.development? %>
-		  	<%= debug(params) %>
-		  	<%= debug(session) %>
+			<% flash.each do |key, value| %>
+			  <div class="alert alert-<%= key %>"><%= value %></div>
 			<% end %>
+			<%= yield %>
 	  </div>
-	</body>
+		<%= render 'layouts/footer' %>	  
+		<% if Rails.env.development? %>
+			<%= debug(params) %>
+			<%= debug(session) %>
+		<% end %>
+	</body>   
 </html>
 
