--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-	<%= render 'layouts/head' %>
-	<body>
-		<%= render 'layouts/navbar' %>
+  <%= render 'layouts/head' %>
+  <body>
+	  <%= render 'layouts/navbar' %>
 		<% flash.each do |key, value| %>
-		  <div class="alert alert-<%= key %>"><%= value %></div>
+			<div class="alert alert-<%= key %>">
+		  	<div class="container">
+		    	<%= value %>
+				</div>
+			</div>
 		<% end %>
 		<%= yield %>
 		<%= render 'layouts/footer' %>	  
