--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -453,21 +453,28 @@ alert {
           border-radius: 4px;
 }
 
+.alert-notice {
+  color: inherit;
+  margin-bottom: 0px;
+}
+  
 .alert-heading {
   color: inherit;
+  margin-bottom: 0px;
 }
 
 .alert .close {
   position: relative;
   top: -2px;
   right: -21px;
-  line-height: 18px;
+  line-height: 1;
 }
 
 .alert-success {
   color: #468847;
   background-color: #dff0d8;
   border-color: #d6e9c6;
+  margin-bottom: 0px;
 }
 
 .alert-danger,
@@ -475,17 +482,20 @@ alert {
   color: #b94a48;
   background-color: #f2dede;
   border-color: #eed3d7;
+  margin-bottom: 0px;
 }
 
 .alert-info {
   color: #3a87ad;
   background-color: #d9edf7;
   border-color: #bce8f1;
+  margin-bottom: 0px;
 }
 
 .alert-block {
   padding-top: 14px;
-  padding-bottom: 14px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .alert-block > p,
