--- a/app/views/feats/index.html.erb
+++ b/app/views/feats/index.html.erb
@@ -1,38 +1,42 @@
 <%= render 'shared/multi_loc_map_script', {obj_list: @feats} %>
-
-  <div class="background-unit">
-    <div class="container">
+<div class="background-unit">
+  <div class="container">
 	  <div class="row">
-        <div class="span12">
-		  <%= link_to(( image_tag @user.image ), @user ) %>
-		  <%= link_to "#{@user.username}", @user %> has 
-		  created the following feats:
-		</div>
+      <div class="span12">
+		  	<%= link_to(( image_tag @user.image ), @user ) %>
+		  	<%= link_to "#{@user.username}", @user %> has created the following
+		 			feats:
+			</div>
 	  </div>
-      <br>
-	  
+    <br>
 	  <div class="row">
-        <div class="span4">
-		  <div class="craig-unit">
-            <%= form_tag feats_path, action: 'show', method: 'get' do %>
+      <div class="span4">
+		  	<div class="craig-unit">
+          <%= form_tag feats_path, action: 'show', method: 'get' do %>
             <fieldset>
-		    <%= select_tag("id",
-		    options_from_collection_for_select(@feats, :id, :name),
-		    onchange: "selection_changed(this)", multiple: 'true')%>
-		    <br>
-            <%= submit_tag 'View Feat', name: nil,
-		    class: "btn btn-small btn-primary" %>
+		    			<%= select_tag("id",
+		    				options_from_collection_for_select(@feats, :id, :name),
+		    				onchange: "selection_changed(this)", multiple: 'true')%>
+		    			<br>
+            	<%= submit_tag 'View Feat', name: nil,
+		    				class: "btn btn-small btn-primary" %>
             </fieldset>
-            <% end %>
-		  </div>
+          <% end %>
+		  	</div>
 	    </div>
-
-        <div class="span8">
+      <div class="span8">
 	      <div class="map-well"> 
 	        <div id="map_canvas"></div>
-          </div>
+        </div>
 	    </div>
 	  </div>
-    </div>
   </div>
+ <% markers = create_markers( self, @feats ) %>
+ <% markers.each do |m|%>
+	<%= debug m.title %>
+	<%= debug m.latitude %>
+	<%= debug m.longitude %>
+	<%= debug m.content_str %>
+ <% end %>
+</div>
 
