Fix mapping on search

--- a/app/views/feats/search.html.erb
+++ b/app/views/feats/search.html.erb
@@ -1,74 +1,4 @@
-<script type="text/javascript"
-	src="http://maps.googleapis.com/maps/api/js?key=<%=ENV['GOOGLE_API_KEY']%>&sensor=false">
-</script>
-<script type="text/javascript">
-	var gMap;
-	var gMarkers = [ ];
-	
-	$(function () {
-		var lat_lng_bounds = new google.maps.LatLngBounds();
-		var zoom = 15;
-		var title = "";
-		
-		<% if @feats.empty? %>
-			<% if !@latitude.nil? && !@longitude.nil? %>
-				var lat_lng = new google.maps.LatLng(<%=@latitude%>, <%=@longitude%>);
-				zoom = 15;
-				title = "<%=params[:address]%>";
-			<% elsif request.location.latitude == 0 && 
-				    request.location.longitude == 0 %>
-				var lat_lng = new google.maps.LatLng(37.09024, -95.712891);
-				zoom    = 4;
-			<% else %>	
-				var lat_lng = new google.maps.LatLng(<%=request.location.latitude%>,
-												<%=request.location.longitude%>);
-			<% end %>
-		<% else %>
-			var lat_lng = 
-				new google.maps.LatLng(<%=@feats.first.location.latitude%>,
-			 				<%=@feats.first.location.longitude%>);
-		<% end %>
-		
-	  var mapOptions = {
-	    center: lat_lng,
-	    zoom: zoom,
-	    mapTypeId: google.maps.MapTypeId.ROADMAP
-	  };
-	
-	  gMap = new google.maps.Map(document.getElementById("map_canvas"),
-	          mapOptions);
-	
-		<% if @feats.any? %>
-			<% @feats.each do |f| %>
-				lat_lng = new google.maps.LatLng(<%=f.location.latitude%>,
-					 							<%=f.location.longitude%>);
-				var marker = new google.maps.Marker({
-					position: lat_lng,
-					title: "<%=f.name%>",
-				});
-
-				marker.setMap(gMap);
-	 			gMarkers.push(marker);
-				lat_lng_bounds.extend(lat_lng);
-			<% end %>
-			gMap.fitBounds(lat_lng_bounds);		
-		<% else %>
-			var marker = new google.maps.Marker({
-				position: lat_lng,
-				title: title
-			});
-
-			marker.setMap(gMap);
-		<% end %>
-		
-	});
-	
-	function selection_changed( select_obj ) {
-		var idx = select_obj.selectedIndex;
-		gMap.panTo(gMarkers[idx].position);		
-	}
-</script>
-
+<%= render 'shared/multi_loc_map_script', {obj_list: @feats} %>
 <div class="background-unit">
   <div class="container">
 		<div class="row-fluid">
